# pi-models-sync

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  models.json.1  models.json.2  pyproject.toml  sgconfig.yml
.github/: dependabot.yml
.github/workflows/: check.yml
.sg-rules/: never-nest.yaml  use-walrus-operator.yml
docs/: IMPLEMENTATION-PLAN.md  SPEC.md
reference/: models-schema.json
src/pi_models_sync/: __init__.py  __main__.py  discovery.py  litellm_client.py  pi_config.py
src/pi_models_sync/providers/: __init__.py  base.py  config.py  ollama.py
tests/: test_discovery.py  test_litellm_client.py  test_main.py  test_ollama.py  test_pi_config.py  test_providers.py
